--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ PSEUDOCODE (high level):
           rgba(0, 0, 0, 0.35) 45%,
           rgba(247, 244, 238, 1) 100%
         ),
-        url("hero-coffee.jpg");
+        url("Website_logo.png");
       background-size: cover;
       background-position: center;
       color: #fdfbf7;
@@ -707,3 +707,4 @@ PSEUDOCODE (high level):
 
 </body>
 </html>
+
